--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.17"
+        "vue": "^2.6.10"
+    },
+    "dependencies": {
+        "cross-env": "^5.2.0"
     }
 }
